--- a/DevNet/DevNet/Views/Home/Manage.cshtml
+++ b/DevNet/DevNet/Views/Home/Manage.cshtml
@@ -7,8 +7,8 @@
 
 <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Favorite IDEs", "Index", "FavoriteIDE")</li>
-        <li>@Html.ActionLink("Software Specialties", "Index", "SoftwareSpecialty")</li>
-        <li>@Html.ActionLink("Programming Languages", "Index", "ProgrammingLanguage")</li>
+        <li><button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Favorite IDEs", "Index", "FavoriteIDE")</button></li>
+        <li><button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Software Specialties", "Index", "SoftwareSpecialty")</button></li>
+        <li><button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Programming Languages", "Index", "ProgrammingLanguage")</button></li>
     </ul>
 </div>
