--- a/DevNet/DevNet/Views/Account/Register.cshtml
+++ b/DevNet/DevNet/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DevNet.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
+    string ShowDialog = ViewData["ShowDialog"].ToString();
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -92,8 +93,54 @@
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
+    
 }
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @{ Html.RenderPartial("_ConfirmRSSFeed.js"); }
 }
+
+@section topLevel{
+
+    @{ Html.RenderPartial("_RenderRSSConfirmDialog"); }
+
+}
+
+
+
+<script>
+
+    if(@ShowDialog == "true")
+    {
+
+        window.onload = function () 
+        {
+
+            //You can call it like
+            //runFunction('@*@Model.CallFunction'*@, ['runFunction is being called']); //alerts test.
+            runFunction('confirmRSS', ['runFunction is being called']); //alerts test.
+         };
+    };
+
+    function runFunction(name, arguments) {
+
+        var fn = window[name];
+
+        var type = typeof fn;
+
+
+        if (typeof fn !== 'function') {
+            return;
+        }
+        else {
+            fn.apply(window);
+        }
+
+
+        // fn.apply(window, arguments);
+
+        }
+
+</script>
