--- a/DevNet/DevNet/Views/ProgrammingLanguage/Create.cshtml
+++ b/DevNet/DevNet/Views/ProgrammingLanguage/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ProgrammingLanguage</h4>
+        <h4>Programming Language</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,13 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default button-color" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index") |
-    @Html.ActionLink("Manage Site", "Manage", "Home")
+<div class="btn-group-lg">
+    <button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Back to List", "Index")</button>
+    <button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Manage Site", "Manage", "Home")</button>
 </div>
+
