--- a/DevNet/DevNet/Views/Shared/_Layout.cshtml
+++ b/DevNet/DevNet/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     </script>
 </head>
 <body>
+    @RenderSection("topLevel", required: false)
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
