--- a/DevNet/DevNet/Views/Dashboard/Dashboard.cshtml
+++ b/DevNet/DevNet/Views/Dashboard/Dashboard.cshtml
@@ -1,4 +1,7 @@
-﻿@model DevNet.Models.DashboardViewModel
+﻿@model PagedList.IPagedList<DevNet.Models.Dashboard>
+@using PagedList.Mvc;
+
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
     ViewBag.Title = "Dashboard";
 
@@ -42,35 +45,41 @@
 
             @{
 
-                if (Model.HistoricData != null)
+               
+                if (Model != null)
                 {
                     <h2 class="sub-header">Historic Data</h2>
                     <div class="table-responsive">
                         <table class="table dashboard-striped">
                             <thead>
                                 <tr style="background-color: rgba(89,0,14,.6);">
-                                    <th>Date Of Birth</th>
-                                    <th>Favorite IDE</th>
-                                    <th>Software Specialty</th>
-                                    <th>Programming Language</th>
-                                    <th>Preferred RSS Feed Category</th>
+                                    <th>@Html.ActionLink("Date Of Birth", "Dashboard", new { sortOrder = ViewBag.DateSortParam })</th>
+                                    <th>@Html.ActionLink("Favorite IDE", "Dashboard", new { sortOrder = ViewBag.IDESortParam })</th>
+                                    <th>@Html.ActionLink("Software Specialty", "Dashboard", new { sortOrder = ViewBag.SoftwareSortParam })</th>
+                                    <th>@Html.ActionLink("Programming Language", "Dashboard", new { sortOrder = ViewBag.ProgrammingSortParam })</th>
+                                    <th>@Html.ActionLink("Preferred RSS Feed Category", "Dashboard", new { sortOrder = ViewBag.RssSortParam })</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (IList<string> record in Model.HistoricData)
+                
+                                @foreach (DevNet.Models.Dashboard record in Model)
                                 {
                                     <tr style="background-color: rgba(89,0,14,.6); color: #cab1b1;">
-                                        <td>@record[0]</td>
-                                        <td>@record[1]</td>
-                                        <td>@record[2]</td>
-                                        <td>@record[3]</td>
-                                        <td>@record[4]</td>
+                                        <td>@record.DateOfBirth.ToShortDateString()</td>
+                                        <td>@record.FavoriteIDEName</td>
+                                        <td>@record.SoftwareSpecialtyName</td>
+                                        <td>@record.ProgrammingLanguageName</td>
+                                        <td>@record.PreferredRSSFeed</td>
                                     </tr>
                                 }
 
 
                             </tbody>
                         </table>
+                        <br />
+                        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+                        @Html.PagedListPager(Model, page => Url.Action("Dashboard", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
                     </div>
                 }
             }
