--- a/DevNet/DevNet/Views/Home/Index.cshtml
+++ b/DevNet/DevNet/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
 
         <ul style="list-style-type: none;"><li style="list-style-type: none;">@Html.ActionLink("Learn more", "About", "Home", new { @class = "btn btn-primary btn-lg nobullets" })&raquo;</li></ul>
 
-        <a href="javascript:confirmRSS()">Confirm RSS</a>
+        @*<a href="javascript:confirmRSS()">Confirm RSS</a>*@
 
     </div>
     @*@if (IsConfirmed == "true")
