--- a/DevNet/DevNet/Views/DevTV/DevTV.cshtml
+++ b/DevNet/DevNet/Views/DevTV/DevTV.cshtml
@@ -348,11 +348,11 @@
     @*<img src="~/Content/medium_video_gallery.png" alt="Video Gallery" style="width:1000px;height:613px">*@
 
 <br>
-<div class="form-group">
+@*<div class="form-group">
     <div class="col-md-offset-2 col-md-10">
 
-        <button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Upload Video", "Upload")</button>
-        @*<input type="submit" value="Upload Video" class="btn btn-default" />*@
+        <button type="button" class="btn btn-primary btn-lg button-color">@Html.ActionLink("Upload Video", "FileUpload")</button>
+     
     </div>
-</div>
+</div>*@
 
