Change message on DevTV

--- a/DevNet/DevNet/Views/DevTV/DevTV.cshtml
+++ b/DevNet/DevNet/Views/DevTV/DevTV.cshtml
@@ -46,7 +46,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-<h4>Please enjoy browsing videos posted by other DevNet members.  Feel free to upload your own.</h4><br>
+<h4>Please enjoy browsing videos posted by other DevNet members. </h4><br>
 
 
     <div id="container" class="gallery"></div>
